--- a/_sass/_screen.scss
+++ b/_sass/_screen.scss
@@ -204,7 +204,7 @@ a {
   position: absolute;
   bottom: 0;
   left: 0;
-  background-color: rgba($link-color, .125);
+  background-color: lighten($link-color, 60%);
   padding: 1rem;
   width: 100%;
   a{
